namespace java com.heepay.rpc.tpds.model

struct TransStatusRequestModel {
    1: string businessSeqNo;
    2: string oldbusinessSeqNo;
}